report/pytest_20251121_baseline.txt

==================================== ERRORS ====================================
_______________ ERROR collecting tests/test_backtest_deepseek.py _______________
.venv/lib/python3.12/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_backtest_deepseek.py:11: in <module>
    from backtest_initial import SimpleBacktester, calculate_metrics
E     File "/mnt/c/Users/ivn_b/Desktop/invest-bot-suite/backtest_initial.py", line 143
E       self._rebalance(first_date, risk_manager)
E   IndentationError: expected an indented block after 'if' statement on line 142
=========================== short test summary info ============================
ERROR tests/test_backtest_deepseek.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
1 error in 11.31s
